tests/basic/check/eq/140.pan.out
tests/basic/check/eq/140.pan:5:1-5: error: unable to verify type of f140
tests/basic/check/eq/140.pan:10:1-5: error: unable to verify type of f141
tests/basic/check/eq/140.pan:15:1-5: error: unable to verify type of f142
tests/basic/check/eq/140.pan:20:1-5: error: unable to verify type of f143